# agentic-memory

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
agent/tests/: conftest.py
crates/agentic-memory/: Cargo.toml
crates/agentic-memory-mcp/: Cargo.toml  README.md
crates/agentic-memory-mcp/config/: default.toml  schema.json
crates/agentic-memory-mcp/examples/: claude_desktop.json  custom_client.rs  vscode_settings.json
crates/agentic-memory-mcp/src/: lib.rs  main.rs
crates/agentic-memory-mcp/src/config/: loader.rs  mod.rs
crates/agentic-memory-mcp/tests/: edge_cases.rs  phase1_types.rs  phase2_protocol.rs  phase3_prompts.rs  phase3_resources.rs  phase3_tools.rs  phase4_session.rs  phase4_streaming.rs  phase5_integration.rs
crates/agentic-memory/src/: lib.rs
crates/agentic-memory/src/v3/: mod.rs
crates/agentic-memory/tests/: conservation_test.rs  longevity_integration.rs  longevity_stress.rs
docs/: quickstart.md
installer/: pyproject.toml
installer/tests/: conftest.py  test_platform.py
paper/paper-i-format/: references.bib
paper/paper-iii-mcp-server/: agentic-memory-mcp-paper.tex
python/: pyproject.toml
python/src/agentic_memory/: agent.py  brain.py
scripts/: check-canonical-sister.sh  check-install-commands.sh  install.sh  publish.sh  test_with_claude.sh
tests/bridge/: Cargo.toml
tests/bridge/examples/: memory_handoff.rs  two_agents.rs
tests/bridge/src/: lib.rs
tests/bridge/tests/: bridge_basic.rs  bridge_concurrent.rs  bridge_multiagent.rs  bridge_stress.rs
(+64 files in other folders)
