[package]
name = "agentic-memory-bridge-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
agentic-memory = { path = "../../crates/agentic-memory" }
agentic-memory-mcp = { path = "../../crates/agentic-memory-mcp" }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tempfile = "3"
